/**
 * Created by qfeng on 2018/12/29
 */

syntax = "proto3";

option cc_enable_arenas = true;
option java_outer_classname = "SetCateValuePb";
option java_multiple_files = true;
option java_package = "algocomp";


package algocomp;

message SetCateValue {
    map<string, float> vals = 1;
}